// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Artist/Artist.tools.svelte: Default 1`] = `
<div>
   
  <span
    class="svelte-4r86n"
    role="article"
  >
    <div
      class="content svelte-4r86n"
    >
      <span
        class="artwork svelte-4r86n"
      >
        <img
          alt="./avatar.jpg"
          class="h-full w-full rounded-full svelte-1psk6yi"
          height="256"
          loading="lazy"
          src="./avatar.jpg"
          width="256"
        />
         
        
      </span>
       
      <p
        class="controls svelte-4r86n"
      >
         
        <button
          class="primary iconOnly large svelte-1e4q28k"
          data-testid="play"
        >
          <i
            class="material-icons svelte-1e4q28k"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-1e4q28k"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-1e4q28k"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-4r86n"
    >
      <h3
        class="svelte-4r86n"
      >
        Foo Fighters
      </h3>
       
      <h4
        class="svelte-rw2hde"
        slot="details"
      >
        2 albums
      </h4>
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Artist/Artist.tools.svelte: No album 1`] = `
<div>
   
  <span
    class="svelte-4r86n"
    role="article"
  >
    <div
      class="content svelte-4r86n"
    >
      <span
        class="artwork svelte-4r86n"
      >
        <img
          alt="./avatar.jpg"
          class="h-full w-full rounded-full svelte-1psk6yi"
          height="256"
          loading="lazy"
          src="./avatar.jpg"
          width="256"
        />
         
        
      </span>
       
      <p
        class="controls svelte-4r86n"
      >
         
        <button
          class="primary iconOnly large svelte-1e4q28k"
          data-testid="play"
        >
          <i
            class="material-icons svelte-1e4q28k"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-1e4q28k"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-1e4q28k"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-4r86n"
    >
      <h3
        class="svelte-4r86n"
      >
        Foo Fighters
      </h3>
       
      <h4
        class="svelte-rw2hde"
        slot="details"
      />
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Artist/Artist.tools.svelte: Unknown 1`] = `
<div>
   
  <span
    class="svelte-4r86n"
    role="article"
  >
    <div
      class="content svelte-4r86n"
    >
      <span
        class="artwork svelte-4r86n"
      >
        <img
          class="h-full w-full rounded-full hidden svelte-1psk6yi"
          height="256"
          loading="lazy"
          width="256"
        />
         
        <span
          class="h-full w-full svelte-1psk6yi rounded-full"
        >
          <i
            class="material-icons svelte-1psk6yi"
          >
            person
          </i>
        </span>
        
      </span>
       
      <p
        class="controls svelte-4r86n"
      >
         
        <button
          class="primary iconOnly large svelte-1e4q28k"
          data-testid="play"
        >
          <i
            class="material-icons svelte-1e4q28k"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-1e4q28k"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-1e4q28k"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-4r86n"
    >
      <h3
        class="svelte-4r86n"
      >
        Unknown
      </h3>
       
      <h4
        class="svelte-rw2hde"
        slot="details"
      >
        2 albums
      </h4>
    </header>
  </span>
</div>
`;
